--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/EditorTexto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jsoup-1.10.1.jar=HTMLParser\\jsoup-1.10.1.jar
 file.reference.mysql-connector-java-5.1.40-bin.jar=mysql-connector-java-5.1.40-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.40-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.40-bin.jar}:\
+    ${file.reference.jsoup-1.10.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
