--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,11 +31,19 @@ endorsed.classpath=
 excludes=
 file.reference.jsoup-1.10.1.jar=HTMLParser\\jsoup-1.10.1.jar
 file.reference.mysql-connector-java-5.1.40-bin.jar=mysql-connector-java-5.1.40-bin.jar
+file.reference.poi-3.15.jar=poi-3.15\\poi-3.15.jar
+file.reference.poi-ooxml-3.15.jar=poi-3.15\\poi-ooxml-3.15.jar
+file.reference.poi-ooxml-schemas-3.15.jar=poi-3.15\\poi-ooxml-schemas-3.15.jar
+file.reference.xmlbeans-2.6.0.jar=poi-3.15\\ooxml-lib\\xmlbeans-2.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.40-bin.jar}:\
-    ${file.reference.jsoup-1.10.1.jar}
+    ${file.reference.jsoup-1.10.1.jar}:\
+    ${file.reference.poi-3.15.jar}:\
+    ${file.reference.poi-ooxml-3.15.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.15.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
